<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">おひるごはんを決めてくれるやつ</string>
    <string name="decide">決めましょう！</string>>
    <string name="action_add">ごはんのばしょ追加</string>
    <string name="action_list">登録したばしょを見る</string>
    <string name="point_name">なまえ</string>
    <string name="add">追加する</string>
    <string name="lastTime">最後に行った日：</string>

    <string name="now_loading">読み込み中…</string>

    <string name="button_nearby">Nearby</string>
    <string name="button_favorite">Favorite</string>
    <string name="button_category">Category</string>
    <string name="button_search">Search</string>

    <string name="button_category_restaurant">restaurant</string>
    <string name="button_category_cafe">cafe</string>
    <string name="button_category_bakery">bakery</string>
    <string name="button_category_food">food</string>
    <string name="button_category_bar">bar</string>

    <string name="button_clear">削除</string>

    <string name="can_not_catch_location">現在地が取得できていません。位置情報の設定を確認してください。</string>

    <string name="api_key"></string>
</resources>
