<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.changami.app.lunchdecider.activities.MapActivity">

    <LinearLayout
        android:id="@+id/linear_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nearby_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_nearby"/>

        <Button
            android:id="@+id/favorite_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_favorite"/>

        <Button
            android:id="@+id/category_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_category"/>

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_search"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_for_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear_map"/>

    <LinearLayout
        android:id="@+id/linear_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_map"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/category_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_category_restaurant"/>

        <Button
            android:id="@+id/category_cafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_category_cafe"/>

        <Button
            android:id="@+id/category_bakery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_category_bakery"/>

        <Button
            android:id="@+id/category_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_category_food"/>

        <Button
            android:id="@+id/category_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_category_bar"/>
    </LinearLayout>
</RelativeLayout>
